# website

./: .gitignore  mkdocs.yml  netlify.toml  pyproject.toml
docs/: contact.md  index.md  pep20.md  projects.md  words.md
docs/scratches/: workout.md
docs/static/favicon/: site.webmanifest
docs/stylesheets/: extra.css
site/: _redirects
